# Picto-Mancers

./: .gitignore  README.md
Assets/: CameraMovement.cs  ReticleDistScale.cs  SoundManager.cs  WaterQuadD.prefab
Assets/3D Items - Wand Pack/: Example Scene.unity
Assets/AI/: GestureRecognizer.onnx
Assets/DebugTools/: GestureDebug.cs  GestureDebug.prefab  NetworkDebug.cs  NetworkDebug.prefab  SpellCastDebug.cs  SpellCastDebug.prefab  SpellSpawner.cs  Transform Debug.prefab  TransformDebug.cs  TriangleChecker.cs  TriggerCapture.cs
Assets/Materials/: BasicParticleMaterial.mat  CardMaterial.mat  CounterSymbolMat.mat  FireSymbolMat.mat  FourPointedLoopMaterial.mat  FourPointedParticleMaterial.mat  LightningSymbolMat.mat  LineMaterial.mat  MeteorSymbolMat.mat  New Material 1.mat  New Material.mat  PoisonSymbolMat.mat  ReticleMaterial.mat  ShieldSymbolMat.mat  SmokeSymbolMat.mat  TestShader.shader  TestShaderMaterial.mat
Assets/Particles/: CardUsedParticles.prefab  CounterParticles.prefab  FireballDestroyParticles.prefab  FireballParticles.prefab  LightningAOEParticles.prefab  LightningParticles.prefab  MeteorDestroyParticles.prefab  MeteorParticles.prefab  PoisonDestroyParticles.prefab  (+5 more)
GestureRecognition/: .gitignore  README.md  drawing_app.py  loader.py  model.ipynb
GestureRecognition/gesture_drawing/: Cargo.toml  gesture_drawing.pyi  pyproject.toml
GestureRecognition/gesture_drawing/src/: lib.rs
ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  PresetManager.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
(+168 files in other folders)
