[package]
name = "gesture_drawing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gesture_drawing"
crate-type = ["cdylib"]

[dependencies]
mint = "0.5.9"
nalgebra = "0.32.2"
ndarray = { version = "0.15.6", features = ["rayon"] }
numpy = "0.18.0"
pyo3 = "0.18.1"
ramer_douglas_peucker = "0.2.2"
rayon = "1.7.0"
